--- a/index.html
+++ b/index.html
@@ -7,11 +7,22 @@
 </head>
 <body>
     <header>
+        <nav class="header-nav">
 
+            <img src="./assets/images/files/Logo (1).png" alt="Logo" class="logo">
+            
+            <div class="nav-links">
+                <a href="#home">Projetos</a>
+                <a href="#services">Quem Somos</a>
+                <a href="#about">Serviços</a>
+                <a href="#contact">Planos</a>
+                <a href="#contact">Orçamentos</a>
+            </div>
+        </nav>
     </header>
     <main>
         <section>
-            
+
         </section>
     </main>
 </body>
