subindo algumas atts

--- a/index.html
+++ b/index.html
@@ -3,20 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>INOV4 TECH</title>
+    <link rel="stylesheet" href="./assets/css/global/global.css">
 </head>
 <body>
-    <nav class="header-nav">
+    <nav class="header-nav" id="nav">
 
         <img src="./assets/images/files/Logo (1).png" alt="Logo" class="logo">
             
-        <div class="nav-links">
+        <div class="nav-links" id="opcoes">
             <a href="#home">Projetos</a>
             <a href="#services">Quem Somos</a>
             <a href="#about">Serviços</a>
             <a href="#contact">Planos</a>
-            <a href="#contact">Orçamentos</a>
+            <a href="#contact" class="destaque">Orçamentos</a>
         </div>
+
+        <button class="menu" id="menu">
+            <span class="um"></span>
+            <span class="dois"></span>
+        </button>
     </nav>
  
     <main>
@@ -24,5 +30,6 @@
 
         </section>
     </main>
+    <script src="./assets/index/nav.js"></script>
 </body>
 </html>
